peer cache checking